Make that HTTPS for github

--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
 <title>fart.css demo</title>
 
 <link href=fart.css rel=stylesheet>
-<script src=http://elementqueries.com/EQCSS.js></script>
+<script src=https://cdnjs.cloudflare.com/ajax/libs/eqcss/1.7.0/EQCSS.min.js></script>
 
 <style>
   * {
